# tabbed-document-ui-example

./: Cargo.toml  LICENSE  README.md
resources/stylesheets/: theme.css
resources/translations/en-US/: strings.ftl
resources/translations/es-ES/: strings.ftl
src/: main.rs  storage.rs
src/ui/: bootstrap.rs  effects.rs  mod.rs  shell.rs
src/ui/commands/: documents.rs  drafts.rs  mod.rs  resources.rs  startup.rs  tabs.rs
src/ui/dialogs/: mod.rs
src/ui/event_handling/: documents.rs  drafts.rs  mod.rs  resources.rs  settings.rs  tabs.rs  workflow.rs
src/ui/events/: mod.rs  ui_events.rs  workflow_events.rs
src/ui/model/: document.rs  document_ui_state.rs  document_workflow.rs  draft_actions.rs  ids.rs  language.rs  mod.rs  model_data.rs  persisted_state.rs  persistence.rs  session_init.rs  settings.rs  settings_actions.rs  tab.rs  tab_actions.rs  tab_title.rs  tests.rs
src/ui/views/: content_host.rs  empty_state_page.rs  home_page.rs  image_document_page.rs  image_info_sidebar.rs  mod.rs  new_document_page.rs  status_bar.rs  text_document_page.rs  text_info_sidebar.rs  toolbar.rs
src/worker/: mod.rs
