[package]
name = "tabbed-document-ui-example"
version = "0.1.0"
edition = "2024"

[dependencies]
vizia = { git = "https://github.com/vizia/vizia", features = ["serde", "tokio"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg"] }
dirs = "6"
rfd = "0.17"
